--- a/src/full.tex
+++ b/src/full.tex
@@ -23,15 +23,13 @@ x_{arif}
         = \frac {1.000 + 10.000} 2
         = 5.500 \\%
 x_{geom}
-                    = \sqrt{x_1 * x_n}
-                    = \sqrt{1.000 * 10.000}
-                    = 3.162 \\%
+        = \sqrt {x_1 * x_n}
+        = \sqrt {1.000 * 10.000}
+        = 3.162 \\%
 x_{garm}
-                    = \frac {2 * x_1 * x_n} {x_1 + x_n}
-                    = \frac 
-                        {2 * 1.000 * 10.000}
-                        {1.000 + 10.000}
-                    = 1.818%
+        = \frac {2 * x_1 * x_n} {x_1 + x_n}
+        = \frac {2 * 1.000 * 10.000} {1.000 + 10.000}
+        = 1.818 \\%
 \end{alignat*}
 
 %
@@ -56,21 +54,19 @@ y_3^*
 \subsection{Step 3}%
 \label{subsec:Step3}%
 \begin{alignat*}{2}%
-y_n
-                    = y_{10}
-                    = 7.90776%
+y_n = y_{10} = {7.908} \\%
 y_{arif}
-                    = (y_1 + y_n) / 2
-                    = (1.0 + 7.90776
-                    = 4.45388%
-y_geom
-                    = sqrt(y1 * y_n)
-                    = sqrt(1.0 * 7.90776)
-                    = 2.8120739677327125%
-y_garm
-                    = (2 * y_1 * y_n) / (y1 + yn)
-                    = (2 * 1.0 * 7.90776) / (1.0 + 7.90776)
-                    = 2.8120739677327125%
+        = \frac {y_1 + y_n} 2
+        = \frac {1.000 + 7.908} 2
+        = 4.454 \\%
+y_{geom}
+        = \sqrt {y_1 * y_n}
+        = \sqrt {1.000 * 7.908}
+        = 2.812 \\%
+y_{garm}
+        = \frac {2 * y_1 * y_n} {y_1 + y_n}
+        = \frac {2 * 1.000 * 7.908} {1.000 + 7.908}
+        = 1.775 \\%
 \end{alignat*}
 
 %
