step 4 done in latex solution

--- a/src/full.tex
+++ b/src/full.tex
@@ -70,4 +70,17 @@ y_{garm}
 \end{alignat*}
 
 %
+\subsection{Step 4}%
+\label{subsec:Step4}%
+\begin{alignat*}{2}%
+\varepsilon_1 = |y_1^* - y_{arif}| = |6.102 - 4.454| = 1.648 \\%
+\varepsilon_2 = |y_1^* - y_{geom}| = |6.102 - 2.812| = 3.290 \\%
+\varepsilon_3 = |y_1^* - y_{garm}| = |6.102 - 1.775| = 4.326 \\%
+\varepsilon_4 = |y_2^* - y_{arif}| = |4.436 - 4.454| = 0.018 \\%
+\varepsilon_5 = |y_2^* - y_{geom}| = |4.436 - 2.812| = 1.624 \\%
+\varepsilon_6 = |y_3^* - y_{arif}| = |2.701 - 4.454| = 1.753 \\%
+\varepsilon_7 = |y_3^* - y_{garm}| = |2.701 - 1.775| = 0.926 \\%
+\end{alignat*}
+
+%
 \end{document}
