--- a/src/full.tex
+++ b/src/full.tex
@@ -12,10 +12,10 @@
 %
 \begin{document}%
 \normalsize%
-\section{Lab1}%
-\label{sec:Lab1}%
-\subsection{Step 1}%
-\label{subsec:Step1}%
+\section{Finding function form}%
+\label{sec:Findingfunctionform}%
+\subsection{Mean values of x)}%
+\label{subsec:Meanvaluesofx)}%
 \begin{alignat*}{2}%
 x_n = x_{10} = {10.000} \\%
 x_{arif}
@@ -33,8 +33,8 @@ x_{garm}
 \end{alignat*}
 
 %
-\subsection{Step 2}%
-\label{subsec:Step2}%
+\subsection{Interpolated y values for mean values of x}%
+\label{subsec:Interpolatedyvaluesformeanvaluesofx}%
 \begin{alignat*}{2}%
 y_1^*
                         = f(x_{arif})
@@ -51,8 +51,8 @@ y_3^*
 \end{alignat*}
 
 %
-\subsection{Step 3}%
-\label{subsec:Step3}%
+\subsection{Mean values of y}%
+\label{subsec:Meanvaluesofy}%
 \begin{alignat*}{2}%
 y_n = y_{10} = {7.908} \\%
 y_{arif}
@@ -70,8 +70,8 @@ y_{garm}
 \end{alignat*}
 
 %
-\subsection{Step 4}%
-\label{subsec:Step4}%
+\subsection{Choosing function form according to epsilon error}%
+\label{subsec:Choosingfunctionformaccordingtoepsilonerror}%
 \begin{alignat*}{2}%
 \varepsilon_1 = |y_1^* - y_{arif}| = |6.102 - 4.454| = 1.648 \\%
 \varepsilon_2 = |y_1^* - y_{geom}| = |6.102 - 2.812| = 3.290 \\%
@@ -80,7 +80,17 @@ y_{garm}
 \varepsilon_5 = |y_2^* - y_{geom}| = |4.436 - 2.812| = 1.624 \\%
 \varepsilon_6 = |y_3^* - y_{arif}| = |2.701 - 4.454| = 1.753 \\%
 \varepsilon_7 = |y_3^* - y_{garm}| = |2.701 - 1.775| = 0.926 \\%
+\Rightarrow \\
+                    \varepsilon_{min}
+                    = \varepsilon_4
+                    = 0.018 \\%
+\Rightarrow \\
+                    y \approx a + b * log(x)%
 \end{alignat*}
+
+%
+\section{Fitting arguments}%
+\label{sec:Fittingarguments}%
 
 %
 \end{document}
