--- a/src/full.tex
+++ b/src/full.tex
@@ -14,8 +14,8 @@
 \normalsize%
 \section{Finding function form}%
 \label{sec:Findingfunctionform}%
-\subsection{Mean values of x)}%
-\label{subsec:Meanvaluesofx)}%
+\subsection{Mean values of x}%
+\label{subsec:Meanvaluesofx}%
 \begin{alignat*}{2}%
 x_n = x_{10} = {10.000} \\%
 x_{arif}
@@ -91,6 +91,31 @@ y_{garm}
 %
 \section{Fitting arguments}%
 \label{sec:Fittingarguments}%
+\subsection{Transformation of coordinates from xOy to qOz}%
+\label{subsec:TransformationofcoordinatesfromxOytoqOz}%
+\begin{alignat*}{2}%
+q = phi(x) = log(x) \\%
+z = psi(y) = y \\%
+A = a \\%
+B = b \\%
+z = A + Bq%
+\end{alignat*}
+
+%
+\subsection{Fitting arguments for linear function in qOz}%
+\label{subsec:FittingargumentsforlinearfunctioninqOz}%
+\begin{alignat*}{2}%
+B
+                    = \frac {n * \sum\limits_{i = 1}^n {q_i * z_i} - \sum\limits_{i = 1}^n {q_i} * \sum\limits_{i = 1}^n {z_i}}
+                        {n * \sum\limits_{i = 1}^n {q_i^2} - (\sum\limits_{i = 1}^n {q_i}) ^ 2}
+                    = \frac {10 * 98.055 - 15.104 * 55.313}
+                        {10 * 27.650 - 228.143}
+                    = 3.000 \\%
+A
+                    = \frac {\sum\limits_{i = 1}^n {z_i} - B * \sum\limits_{i = 1}^{n} {q_i}} n
+                    = \frac {55.313 - 3.000 * 15.104} {10}
+                    = 1.000 \\%
+\end{alignat*}
 
 %
 \end{document}
