full solution done, need to add x/y, q/z tables and x/y graph with means

--- a/src/full.tex
+++ b/src/full.tex
@@ -73,13 +73,20 @@ y_{garm}
 \subsection{Choosing function form according to epsilon error}%
 \label{subsec:Choosingfunctionformaccordingtoepsilonerror}%
 \begin{alignat*}{2}%
-\varepsilon_1 = |y_1^* - y_{arif}| = |6.102 - 4.454| = 1.648 \\%
-\varepsilon_2 = |y_1^* - y_{geom}| = |6.102 - 2.812| = 3.290 \\%
-\varepsilon_3 = |y_1^* - y_{garm}| = |6.102 - 1.775| = 4.326 \\%
-\varepsilon_4 = |y_2^* - y_{arif}| = |4.436 - 4.454| = 0.018 \\%
-\varepsilon_5 = |y_2^* - y_{geom}| = |4.436 - 2.812| = 1.624 \\%
-\varepsilon_6 = |y_3^* - y_{arif}| = |2.701 - 4.454| = 1.753 \\%
-\varepsilon_7 = |y_3^* - y_{garm}| = |2.701 - 1.775| = 0.926 \\%
+\varepsilon_1
+        = |y_1^* - y_{arif}| = |6.102 - 4.454| = 1.648 \\%
+\varepsilon_2
+        = |y_1^* - y_{geom}| = |6.102 - 2.812| = 3.290 \\%
+\varepsilon_3
+        = |y_1^* - y_{garm}| = |6.102 - 1.775| = 4.326 \\%
+\varepsilon_4
+        = |y_2^* - y_{arif}| = |4.436 - 4.454| = 0.018 \\%
+\varepsilon_5
+        = |y_2^* - y_{geom}| = |4.436 - 2.812| = 1.624 \\%
+\varepsilon_6
+        = |y_3^* - y_{arif}| = |2.701 - 4.454| = 1.753 \\%
+\varepsilon_7
+        = |y_3^* - y_{garm}| = |2.701 - 1.775| = 0.926 \\%
 \Rightarrow \\
                     \varepsilon_{min}
                     = \varepsilon_4
@@ -115,6 +122,15 @@ A
                     = \frac {\sum\limits_{i = 1}^n {z_i} - B * \sum\limits_{i = 1}^{n} {q_i}} n
                     = \frac {55.313 - 3.000 * 15.104} {10}
                     = 1.000 \\%
+\end{alignat*}
+
+%
+\subsection{Mapping arguments back to xOy}%
+\label{subsec:MappingargumentsbacktoxOy}%
+\begin{alignat*}{2}%
+a = A = 1.000 \\%
+b = B = 3.000 \\%
+y \approx1.000 + 3.000 * log(x)%
 \end{alignat*}
 
 %
