plot added to pdf

--- a/src/full.tex
+++ b/src/full.tex
@@ -7,6 +7,7 @@
 \usepackage{geometry}%
 \geometry{tmargin=1cm,lmargin=1cm}%
 \usepackage{amsmath}%
+\usepackage{graphicx}%
 %
 %
 %
@@ -131,7 +132,13 @@ A
 a = A = 1.000 \\%
 b = B = 3.000 \\%
 y \approx1.000 + 3.000 * log(x)%
-\end{alignat*}
+\end{alignat*}%
+
+
+\begin{figure}[htbp]%
+\centering%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.bk0cjecb/21360f37-6fd7-4b49-81b9-4e4767b84f1f.pdf}%
+\end{figure}
 
 %
 \end{document}
