--- a/2/src/full.tex
+++ b/2/src/full.tex
@@ -7,27 +7,33 @@
 \usepackage{geometry}%
 \geometry{tmargin=1cm,lmargin=1cm}%
 \usepackage{longtable}%
+\usepackage{amsmath}%
 %
 %
 %
 \begin{document}%
 \normalsize%
-\section{input data}%
-\label{sec:inputdata}%
+input data%
 \begin{longtable}{l l l l l l l l l l }%
 6.0&9.1&8.7&6.7&5.4&10.9&9.9&9.4&9.9&9.4\\%
 9.2&9.6&8.1&7.8&9.5&8.2&9.7&8.1&8.5&9.5\\%
 7.9&8.9&8.9&9.7&5.7&11.4&9.7&9.2&9.8&10.6\\%
-\end{longtable}
-
-%
-\section{variational series}%
-\label{sec:variationalseries}%
+\end{longtable}%
+variational series%
 \begin{longtable}{l l l l l l l l l l }%
 5.4&5.7&6.0&6.7&7.8&7.9&8.1&8.1&8.2&8.5\\%
 8.7&8.9&8.9&9.1&9.2&9.2&9.4&9.4&9.5&9.5\\%
 9.6&9.7&9.7&9.7&9.8&9.9&9.9&10.6&10.9&11.4\\%
-\end{longtable}
-
-%
+\end{longtable}%
+\begin{alignat*}{2}%
+x_{min} = 5.4; ~ x_{max} = 11.4 \\%
+L = 6;
+            ~ h = \frac { x_{max} - x_{min} } L
+                = \frac { 11.4 - 5.4 } 6
+                = 1%
+\end{alignat*}%
+bin edges%
+\begin{longtable}{l l l l l l l }%
+5.4&6.4&7.4&8.4&9.4&10.4&11.4\\%
+\end{longtable}%
 \end{document}
