simulating tabular with pylatex

--- a/2/src/full.tex
+++ b/2/src/full.tex
@@ -36,4 +36,17 @@ bin edges%
 \begin{longtable}{l l l l l l l }%
 5.4&6.4&7.4&8.4&9.4&10.4&11.4\\%
 \end{longtable}%
+\begin{longtable}{l l }%
+\hline%
+range&frequency\\%
+\hline%
+\endhead%
+(5.4, 6.4)&3\\%
+(6.4, 7.4)&1\\%
+(7.4, 8.4)&5\\%
+(8.4, 9.4)&7\\%
+(9.4, 10.4)&11\\%
+(10.4, 11.4)&3\\%
+\hline%
+\end{longtable}%
 \end{document}
