--- a/2/src/full.tex
+++ b/2/src/full.tex
@@ -9,6 +9,7 @@
 \usepackage{booktabs}%
 \usepackage{longtable}%
 \usepackage{amsmath}%
+\usepackage{graphicx}%
 %
 %
 %
@@ -37,17 +38,25 @@ bin edges%
 \begin{longtable}{l l l l l l l }%
 5.4&6.4&7.4&8.4&9.4&10.4&11.4\\%
 \end{longtable}%
-\begin{tabular}{lr}
+\begin{tabular}{c|c|c|c|c}
 \toprule
-       range &  frequency \\
+       range &  frequency & frequency density &  cumulative frequency & cumulative frequency density \\
 \midrule
-  (5.4, 6.4) &          3 \\
-  (6.4, 7.4) &          1 \\
-  (7.4, 8.4) &          5 \\
-  (8.4, 9.4) &          7 \\
- (9.4, 10.4) &         11 \\
-(10.4, 11.4) &          3 \\
+  (5.4, 6.4) &          3 &               0.1 &                     3 &                          0.1 \\
+  (6.4, 7.4) &          1 &          0.033333 &                     4 &                     0.133333 \\
+  (7.4, 8.4) &          5 &          0.166667 &                     9 &                          0.3 \\
+  (8.4, 9.4) &          7 &          0.233333 &                    16 &                     0.533333 \\
+ (9.4, 10.4) &         11 &          0.366667 &                    27 &                          0.9 \\
+(10.4, 11.4) &          3 &               0.1 &                    30 &                          1.0 \\
 \bottomrule
 \end{tabular}
+%
+
+
+\begin{figure}[htbp]%
+\centering%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.ori1akor/d0492bb8-9610-4279-acbe-e3748c7cb502.pdf}%
+\end{figure}
+
 %
 \end{document}
