--- a/2/src/full.tex
+++ b/2/src/full.tex
@@ -7,6 +7,7 @@
 \usepackage{geometry}%
 \geometry{tmargin=1cm,lmargin=1cm}%
 \usepackage{booktabs}%
+\usepackage{float}%
 \usepackage{longtable}%
 \usepackage{amsmath}%
 \usepackage{graphicx}%
@@ -53,10 +54,14 @@ bin edges%
 %
 
 
-\begin{figure}[htbp]%
+\begin{figure}[H]%
 \centering%
-\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.ori1akor/d0492bb8-9610-4279-acbe-e3748c7cb502.pdf}%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.70hcxix3/4813737a-ada3-4445-a0cf-7b3e7430ee61.pdf}%
 \end{figure}
 
 %
+\begin{alignat*}{2}%
+\overline { x_{b} } = 8.93%
+;~ D = 1.99%
+\end{alignat*}%
 \end{document}
