--- a/2/src/full.tex
+++ b/2/src/full.tex
@@ -18,37 +18,36 @@
 \normalsize%
 input data%
 \begin{longtable}{l l l l l l l l l l }%
-6.0&9.1&8.7&6.7&5.4&10.9&9.9&9.4&9.9&9.4\\%
-9.2&9.6&8.1&7.8&9.5&8.2&9.7&8.1&8.5&9.5\\%
-7.9&8.9&8.9&9.7&5.7&11.4&9.7&9.2&9.8&10.6\\%
+180&155&149&176&181&146&105&191&163&116\\%
+113&182&149&195&147&146&113&185&155&149\\%
+180&131&184&198&119&122&160&153&109&158\\%
 \end{longtable}%
 variational series%
 \begin{longtable}{l l l l l l l l l l }%
-5.4&5.7&6.0&6.7&7.8&7.9&8.1&8.1&8.2&8.5\\%
-8.7&8.9&8.9&9.1&9.2&9.2&9.4&9.4&9.5&9.5\\%
-9.6&9.7&9.7&9.7&9.8&9.9&9.9&10.6&10.9&11.4\\%
+105&109&113&113&116&119&122&131&146&146\\%
+147&149&149&149&153&155&155&158&160&163\\%
+176&180&180&181&182&184&185&191&195&198\\%
 \end{longtable}%
 \begin{alignat*}{2}%
-x_{min} = 5.4; ~ x_{max} = 11.4 \\%
-L = 6;
+x_{min} = 105; ~ x_{max} = 198 \\%
+L = 5;
             ~ h = \frac { x_{max} - x_{min} } L
-                = \frac { 11.4 - 5.4 } 6
-                = 1%
+                = \frac { 198 - 105 } 5
+                = 18.6%
 \end{alignat*}%
 bin edges%
-\begin{longtable}{l l l l l l l }%
-5.4&6.4&7.4&8.4&9.4&10.4&11.4\\%
+\begin{longtable}{l l l l l l }%
+105.0&123.6&142.2&160.8&179.4&198.0\\%
 \end{longtable}%
 \begin{tabular}{c|c|c|c|c}
 \toprule
-       range &  frequency & frequency density &  cumulative frequency & cumulative frequency density \\
+         range &  frequency & frequency density &  cumulative frequency & cumulative frequency density \\
 \midrule
-  (5.4, 6.4) &          3 &               0.1 &                     3 &                          0.1 \\
-  (6.4, 7.4) &          1 &          0.033333 &                     4 &                     0.133333 \\
-  (7.4, 8.4) &          5 &          0.166667 &                     9 &                          0.3 \\
-  (8.4, 9.4) &          7 &          0.233333 &                    16 &                     0.533333 \\
- (9.4, 10.4) &         11 &          0.366667 &                    27 &                          0.9 \\
-(10.4, 11.4) &          3 &               0.1 &                    30 &                          1.0 \\
+(105.0, 123.6) &          7 &          0.233333 &                     7 &                     0.233333 \\
+(123.6, 142.2) &          1 &          0.033333 &                     8 &                     0.266667 \\
+(142.2, 160.8) &         11 &          0.366667 &                    19 &                     0.633333 \\
+(160.8, 179.4) &          2 &          0.066667 &                    21 &                          0.7 \\
+(179.4, 198.0) &          9 &               0.3 &                    30 &                          1.0 \\
 \bottomrule
 \end{tabular}
 %
@@ -56,12 +55,12 @@ bin edges%
 
 \begin{figure}[H]%
 \centering%
-\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.70hcxix3/4813737a-ada3-4445-a0cf-7b3e7430ee61.pdf}%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.xlvfjd9r/acc854f5-7ec4-4b30-ab38-15e207e3eb27.pdf}%
 \end{figure}
 
 %
 \begin{alignat*}{2}%
-\overline { x_{b} } = 8.93%
-;~ D = 1.99%
+\overline { x_{b} } = 154.60%
+;~ D = 753.02%
 \end{alignat*}%
 \end{document}
