def print_central_moment

--- a/3/src/full.tex
+++ b/3/src/full.tex
@@ -29,10 +29,19 @@
 \begin{alignat*}{2}%
 \overline {{ x_{{b}} }} = 8.87%
 ;~ D = 1.90%
+\end{alignat*}%
+\begin{alignat*}{2}%
 \\ \hat{\mu}_3
-             = \frac 1 n \sum\limits_{j = 1}^L {n_j (x_j - \overline {{ x_{{b}} }})^3}
-             = \frac 1 { 30 } * (-55.87)
-             = -1.86
+            = \frac 1 n \sum\limits_{j = 1}^L {n_j (x_j - \overline {{ x_{{b}} }})^3}
+            = \frac 1 { 30 } * (-55.87)
+            = -1.86
+        %
+\end{alignat*}%
+\begin{alignat*}{2}%
+\\ \hat{\mu}_3
+            = \frac 1 n \sum\limits_{j = 1}^L {n_j (x_j - \overline {{ x_{{b}} }})^4}
+            = \frac 1 { 30 } * (313.99)
+            = 10.47
         %
 \end{alignat*}%
 \end{document}
