--- a/3/src/full.tex
+++ b/3/src/full.tex
@@ -28,20 +28,34 @@
 %
 \begin{alignat*}{2}%
 \overline {{ x_{{b}} }} = 8.87%
-;~ D = 1.90%
+\\ \mu_2 = D = 1.90%
 \end{alignat*}%
 \begin{alignat*}{2}%
-\\ \hat{\mu}_3
+\\ \mu_3
             = \frac 1 n \sum\limits_{j = 1}^L {n_j (x_j - \overline {{ x_{{b}} }})^3}
             = \frac 1 { 30 } * (-55.87)
             = -1.86
         %
 \end{alignat*}%
 \begin{alignat*}{2}%
-\\ \hat{\mu}_3
+\\ \mu_4
             = \frac 1 n \sum\limits_{j = 1}^L {n_j (x_j - \overline {{ x_{{b}} }})^4}
             = \frac 1 { 30 } * (313.99)
             = 10.47
+        %
+\end{alignat*}%
+\begin{alignat*}{2}%
+\beta_1^2
+            = \frac {\mu_2^3} {\mu_3^2}
+            = \frac {6.86} {3.47}
+            = 0.51
+        %
+\end{alignat*}%
+\begin{alignat*}{2}%
+\beta_2
+            = \frac {\mu_4} {\mu_2^2}
+            = \frac {10.47} {3.61}
+            = 2.90
         %
 \end{alignat*}%
 \end{document}
