--- a/3/src/full.tex
+++ b/3/src/full.tex
@@ -7,7 +7,9 @@
 \usepackage{geometry}%
 \geometry{tmargin=1cm,lmargin=1cm}%
 \usepackage{booktabs}%
+\usepackage{float}%
 \usepackage{amsmath}%
+\usepackage{graphicx}%
 %
 %
 %
@@ -58,4 +60,12 @@
             = 2.90
         %
 \end{alignat*}%
+
+
+\begin{figure}[H]%
+\centering%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.9lsn4j1x/42bc2d30-94ee-489d-a3d7-f4e850194bfb.pdf}%
+\end{figure}
+
+%
 \end{document}
