--- a/3/src/full.tex
+++ b/3/src/full.tex
@@ -64,8 +64,19 @@
 
 \begin{figure}[H]%
 \centering%
-\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.9lsn4j1x/42bc2d30-94ee-489d-a3d7-f4e850194bfb.pdf}%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp._ofsgzl3/ad7f2261-7d98-419a-8309-d9ac6140a1a3.pdf}%
 \end{figure}
 
 %
+\begin{alignat*}{2}%
+\alpha = \overline {{ x_{{b}} }} = 8.87%
+\\ \lambda
+            = \sigma
+            = \sqrt D
+            = \sqrt {1.9}
+            = 1.38
+        %
+\\ W_n(x; ~ \alpha, ~ \lambda) = \frac 1 {{\lambda \sqrt {{2 \pi}} }}
+            e^{{ - \frac {{(x - \alpha)^2}} {{2 \lambda^2}} }}%
+\end{alignat*}%
 \end{document}
