now full for real

--- a/3/src/full.tex
+++ b/3/src/full.tex
@@ -63,30 +63,30 @@
 
 \begin{figure}[H]%
 \centering%
-\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.5nq6ge_d/0bb741da-e8f4-472c-8358-39df817c0a5e.pdf}%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.n8oxk7pr/75db2bd1-dddd-4aef-9f24-f8e4e68619b9.pdf}%
 \end{figure}
 
 %
 \begin{alignat*}{2}%
-\alpha = \overline {{ x_{{b}} }} = 154.6%
 \\ \lambda
             = \sigma
             = \sqrt D
             = \sqrt {753.02}
             = 27.44
         %
-\\ W_n(x; ~ \alpha, ~ \lambda)
-            = \frac 1 {{\lambda \sqrt {{2 \pi}} }}
-                e^{{ - \frac {{(x - \alpha)^2}} {{2 \lambda^2}} }}%
-\\ W_n(x; ~154.60, ~ 27.44)
-            = \frac 1 { 27.44 \sqrt {2 \pi} }
-                e^{ - \frac {(x - 154.60)^2} {2 * 27.44^2} }%
+\\ W_R(x; ~ \alpha, ~ \lambda)
+            = \frac 1 \lambda
+        %
+\\ W_R(x; ~ \alpha, ~ 27.44)
+            = \frac 1 {27.44}
+            = 0.0364
+        %
 \end{alignat*}%
 
 
 \begin{figure}[H]%
 \centering%
-\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.5nq6ge_d/3e541cec-0254-4eb2-970f-44b18cd69a41.pdf}%
+\includegraphics[width=1\textwidth]{/tmp/pylatex-tmp.n8oxk7pr/deffa005-3e8a-41aa-ad0f-65992f951cd6.pdf}%
 \end{figure}
 
 %
